Fix pasta image becoming too big

--- a/src/style.css
+++ b/src/style.css
@@ -4,7 +4,7 @@ body {
 
 .pastaImg {
     display: block;
-    width: 50%;
+    width: 500px;
     height: auto;
     margin-left: auto;
     margin-right: auto;
